# football_scheduler

./: README.md  date_generator.py  input_data.py  main.py  match.py  premier_league_probabilities.csv  pyproject.toml  requirements.txt  schedule.py
KPIs/: kpi.py  midweek_distance.py  unplayed_matches.py
data/: dates.csv  distances.csv  probabilities.csv
output/: incumbent_schedule.csv  neighbour.csv  schedule.csv
rust_scheduler/: Cargo.toml
rust_scheduler/src/: dates.rs  distances.rs  fixture.rs  input_data.rs  lib.rs  main.rs  schedule.rs
rust_scheduler/src/schedulers/: kpi.rs  scheduler.rs  simulated_annealing.rs
schedulers/: mip_schedule.py  scheduler.py  simulation_schedule.py
