[package]
name = "rust_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
csv = "1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
array2d = "0.3.2"